# frugalAI-api

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: config.py  gcp.py  main.py  model.py  routes.py  utils.py
