[project]
name = "frugalai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "google>=3.0.0",
    "google-cloud-storage>=3.1.0",
    "numpy>=2.0.2",
    "packaging>=25.0",
    "peft>=0.15.2",
    "requests>=2.32.3",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
